fixed gaps & font

--- a/styles/Stepsblokc.css
+++ b/styles/Stepsblokc.css
@@ -5,7 +5,7 @@
 
 .text-font-steps {
   font-family: "Montserrat", sans-serif;
-  font-weight: 800;
+  font-weight: bold;
   font-size: 64px;
 }
 
@@ -109,11 +109,13 @@
   text-align: left;
   color: #ffffff;
   margin-top: 30px;
-  margin-left: 70px;
-  font-weight: 600;
+  font-weight: 700;
   font-family: "Mont", sans-serif;
   font-style: italic;
   font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .text-font-steps-block {
