--- a/styles/promo.css
+++ b/styles/promo.css
@@ -41,7 +41,7 @@
   width: 100%;
   height: 410px;
   border-radius: 60px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   margin-top: 56px;
   padding: 20px;
 }
@@ -102,7 +102,7 @@
 
   .info-wrapper {
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     padding-bottom: 0;
   }
 
